# agentLearning

./: README.md
docs/: 02-on-device-ai-track.md  03-cpp-for-on-device-ai.md  04-edge-cloud-agent-capstone.md  05-on-device-inference-llamacpp.md  06-on-device-profiling.md  07-on-device-agent-rag.md  08-on-device-edge-cloud-routing.md  12-agent-eval-and-metrics.md  13-docker-deploy-agent-service.md  14-agentops-mini-platform-design.md  15-learn-claude-code-study-guide.md  agent-learning-roadmap.md  agent-trace-and-observability.md  agentops-mini-platform-design.md  cpp-for-on-device-ai.md  edge-cloud-agent-capstone.md  llm-api-and-tool-calling.md  on-device-agent-rag.md  on-device-ai-track.md  on-device-edge-cloud-routing.md  on-device-inference-llamacpp.md  on-device-profiling.md  python-fastapi-essentials.md
pocketagent/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
pocketagent/app/: build.gradle.kts
pocketagent/app/src/main/: AndroidManifest.xml
pocketagent/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
pocketagent/app/src/main/java/com/example/pocketagent/: ChatViewModel.kt  LlamaBridge.kt  MainActivity.kt
pocketagent/app/src/main/res/values/: strings.xml  themes.xml
pocketagent/gradle/wrapper/: gradle-wrapper.properties
